--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     build: ./
     ports:
       - "3001:3000"
-    envfile:
+    env_file:
       - .env  
     depends_on:
       - postgresdb  
